[PR C++/15272] lookups with ambiguating dependent base

https://gcc.gnu.org/ml/gcc-patches/2017-12/msg00766.html
	PR c++/15272
	* pt.c (tsubst_baselink): Don't repeat the lookup for
	non-dependent baselinks.

	PR c++/15272
	* g++.dg/template/pr71826.C: Adjust for 15272 fix.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@255605 138bc75d-0d04-0410-961f-82ee72b054a4